--- a/ClientContactViews/ExpandableMenuButtons.xaml
+++ b/ClientContactViews/ExpandableMenuButtons.xaml
@@ -12,6 +12,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="res\styles\Colours.xaml"/>
+                <ResourceDictionary Source="res\styles\DefaultStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         
             
@@ -82,30 +83,10 @@
                 <Setter Property="Margin" Value="5"/>
                 <Setter Property="Width" Value="20"/>
             </Style>
-            <Style TargetType="Button" x:Key="menuBtn">
-                <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+            <Style TargetType="Button" x:Key="menuBtn" BasedOn="{StaticResource defaultImageBtnStyle}">
                 <Setter Property="Width" Value="{StaticResource buttonWidth}"/>
-                <Setter Property="BorderThickness" Value="0"/>
-                <Setter Property="Background" Value="{StaticResource lighter}"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="Button">
-                            <Border x:Name="bd" Background="{TemplateBinding Background}">
-
-                                <Grid  >
-                                    <ContentPresenter VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
-                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
-                                </Grid>
-                            </Border>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter TargetName="bd" Property="Background" Value="{StaticResource light}"/>
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
             </Style>
+            
             <Storyboard x:Key="Storyboard1">
                 <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)" Storyboard.TargetName="Toggle">
                     <DiscreteObjectKeyFrame KeyTime="0:0:0.5" Value="{x:Static Visibility.Hidden}"/>
