Add OrganisationPopup allowing users to edit existing or add new organisations

--- a/ClientContactViews/MainWindow.xaml
+++ b/ClientContactViews/MainWindow.xaml
@@ -31,5 +31,8 @@
         <local:LocationPopup DataContext="{Binding LocationPopup}"
                              Background="{StaticResource popupBackground}" 
                              Visibility="{Binding Path=LocationPopupVisibility, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <local:OrganisationPopup DataContext="{Binding OrganisationPopup}"
+                             Background="{StaticResource popupBackground}" 
+                             Visibility="{Binding Path=OrganisationPopupVisibility, Converter={StaticResource BooleanToVisibilityConverter}}" />
     </Grid>
 </Window>
