--- a/ClientContactViews/MainWindow.xaml
+++ b/ClientContactViews/MainWindow.xaml
@@ -13,17 +13,25 @@
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" MinWidth="300"/>
                 <ColumnDefinition Width="5"/>
                 <ColumnDefinition Width="*" MinWidth="300"/>
             </Grid.ColumnDefinitions>
-
-             <local:ContactList DataContext="{Binding ContactList}" Grid.Column="0"/>
-            <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" Background="#14073A" />
-            <local:ContactInfoBox DataContext="{Binding ContactInfoBox}" Grid.Column="2" VerticalAlignment="Stretch"/>
-            <Image  Grid.Column="2" Grid.Row="5" Visibility="{Binding AddressBook ,  
+            <Menu Grid.Row="0" Grid.ColumnSpan="3">
+                <MenuItem Header="Add..">
+                    <MenuItem Header="Add new organisation" Command="{Binding AddNewOrganisation}"/>
+                    <MenuItem Header="Add new location"/>
+                    <MenuItem Header="Add new contact"/>
+                </MenuItem>
+            </Menu>
+            <local:ContactList DataContext="{Binding ContactList}" Grid.Column="0" Grid.Row="1"/>
+            <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" Background="#14073A" Grid.Row="1" />
+            <local:ContactInfoBox DataContext="{Binding ContactInfoBox}" Grid.Column="2" VerticalAlignment="Stretch" Grid.Row="1"/>
+            <Image  Grid.Column="2" Grid.Row="1" Visibility="{Binding AddressBook ,  
                                     Converter={StaticResource BooleanToVisibilityConverter} }"
                     MaxWidth="200" Source=".\res\address-book.png"/>
 
